# CiteEverythingForMe

./: .env.example  .gitignore  README.md  UNSW_Harvard_referencing.md  USAGE_GUIDE.md  agent.py  prompt.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: __init__.py  agent_setup.py  main.py  models.py
agent/src/: prompt.md
docs/: USAGE_GUIDE.md
extension/: README.md  manifest.json
extension/background/: background.js
extension/content/: content.js
extension/popup/: popup.html  popup.js
shared/: __init__.py  citation_generator.py
tests/: __init__.py  conftest.py  test_api.py  test_citation_generator.py
